<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/newGame"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/new_game"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/save_on_exit"
        android:orderInCategory="100"
        android:title="@string/save_on_exit"
        android:checkable="true"/>
    
    <item
        android:id="@+id/timer"
        android:orderInCategory="100"
        android:title="@string/timer"
        android:checkable="true"/>
    
    <item
        android:id="@+id/inspection_time"
        android:orderInCategory="100"
        android:title="@string/inspection_time"/>
    
    <item 
        android:id="@+id/scale"
        android:orderInCategory="100"
        android:title="@string/scale"/>

</menu>